fix overflow + hide scroll bars

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,3 @@
-* {
-  overflow: hidden !important;
-}
-
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -9,5 +5,11 @@ html {
 }
 body {
   margin: 0;
-  background: #F5F5F5 !important;
+  background: #f5f5f5 !important;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
 }
